# abet-syllabus

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
notes/: 01-project-understanding.md  02-architecture-decision.md  03-implementation-plan.md
src/abet_syllabus/: __init__.py  __main__.py  cli.py  config.py  logging_config.py  term.py  validate.py
src/abet_syllabus/db/: models.py  repository.py  schema.py
src/abet_syllabus/export/: __init__.py  exporter.py
src/abet_syllabus/extract/: __init__.py  detector.py  docx_extractor.py  extractor.py  models.py  pdf_extractor.py
src/abet_syllabus/generate/: __init__.py  assembler.py  docx_generator.py  generator.py  pdf_converter.py
src/abet_syllabus/ingest/: __init__.py  pipeline.py
src/abet_syllabus/mapping/: __init__.py  anthropic_provider.py  engine.py  openrouter_provider.py  provider.py
src/abet_syllabus/parse/: __init__.py  _common.py  format_a_parser.py  format_b_parser.py  models.py  normalize.py  parser.py
src/abet_syllabus/templates/: ABETSyllabusTemplate.docx
tests/: test_cli.py  test_db.py  test_enhancements.py  test_extract.py  test_force_ingest_and_aliases.py  test_generate.py  test_ingest.py  test_mapping.py  test_parse.py  test_polish.py
